[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gazu"
version = "1.1.6"
description = "Gazu is a client for Zou, the API to store the data of your CG production."
readme = "README.rst"
license = { text = "GNU Library or Lesser General Public License (LGPL)" }
requires-python = ">= 3.7"
authors = [
    { name = "CG Wire", email = "frank@cg-wire.com" },
]
keywords = ["cg", "production", "asset manager", "asset", "shot", "tasks", "tracking"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "python-socketio[client]>=5.11.0,<6",
    "requests>=2.25.1",
    "pywin32>=308; sys_platform == 'win32'",
    "typing_extensions>=4",
]

[project.urls]
Homepage = "https://gazu.cg-wire.com/"

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = ["wheel"]
test = [
    "pytest",
    "pytest-cov",
    "requests_mock",
    "multipart; python_version >= '3.8'",
]
lint = [
    "autoflake==2.3.1; python_version >= '3.8'",
    "black==26.1.0; python_version >= '3.10'",
    "pre-commit==4.5.1; python_version >= '3.10'",
]
cli = ["click>=7.0"]

[project.scripts]
gazu-cli = "gazu.cli:main"

[tool.setuptools.packages.find]
include = ["gazu*"]

[tool.black]
line-length = 79
