[metadata]
name = gazu
description = Gazu is a client for Zou, the API to store the data of your CG production.
long_description = file: README.rst
keywords = cg, production, asset manager, asset, shot, tasks, tracking
license = GNU Library or Lesser General Public License (LGPL)
license_file = LICENSE
author = CG Wire
author_email = frank@cg-wire.com
url = https://gazu.cg-wire.com/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    python-socketio[client]==4.2.1; python_version == "2.7"
    python-socketio[client]==4.6.1; python_version >= "3.5"
    deprecated==1.2.13
    requests>=2.25.1,<=2.28.1

[options.packages.find]
# ignore gazutest directory
include = gazu*

[options.extras_require]
dev =
    wheel

test =
    pytest<=7.1.3
    pytest-cov<=3.0.0
    requests_mock==1.10.0
    black<=22.8.0; python_version >= "3.5"
    pre-commit<=2.20.0
