[metadata]
name = gazu
description = Gazu is a client for Zou, the API to store the data of your CG production.
long_description = file: README.rst
keywords = cg, production, asset manager, asset, shot, tasks, tracking
license = GNU Library or Lesser General Public License (LGPL)
license_file = LICENSE
author = CG Wire
author_email = frank@cg-wire.com
url = https://gazu.cg-wire.com/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    python-socketio[client]==5.9.0; python_version != '2.7'
    requests>=2.25.1

[options.packages.find]
# ignore gazutest directory
include = gazu*

[options.extras_require]
dev =
    wheel

test =
    pytest
    pytest-cov
    requests_mock

lint =
    black==23.9.1; python_version != '2.7'
    pre-commit==3.4.0; python_version >= '3.8'
